--- a/app/src/main/res/layout/recycler_view_progress.xml
+++ b/app/src/main/res/layout/recycler_view_progress.xml
@@ -8,6 +8,7 @@
     <ProgressBar
         android:layout_width="match_parent"
         android:layout_height="32dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_marginLeft="85dp" />
 
 </FrameLayout>
